<resources>
    <string name="bb"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MYTEM</string>
    <string name="nav_header_desc">이게뭘까</string>
    <string name="action_settings">설정</string>
    <string name="app_name">"MYTEM"</string>
    <string name="LOGIN">로그인</string>
    <string name="login">login</string>
    <string name="login_join">로그인/회원가입</string>
    <string name="logout">로그아웃</string>
    <string name="join">회원가입</string>
    <string name="cancel">취소</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pwck">재확인</string>
    <string name="ad">주소</string>
    <string name="phone">핸드폰</string>
    <string name="rrn">주민등록번호</string>
    <string name="create">회원가입</string>
    <string name="name_h">이름 입력</string>
    <string name="id_h">아이디 입력</string>
    <string name="pw_h">6자리 이상 입력</string>
    <string name="pwck_h">비밀번호 한번 더 입력</string>
    <string name="rrn_h">앞의 7자리만 입력</string>
    <string name="phone_h">핸드폰 번호 입력</string>
    <string name="email_h">이메일 주소 입력</string>
    <string name="doubleck">중복확인</string>
    <string name="bar">-</string>
    <string name="star">******</string>
    <string name="email">e-mail</string>
    <string name="title_board_e"> </string>
    <string name="product_name">제품명</string>
    <string name="detailed_description">제품 상세 설명</string>
    <string name="setting">설정</string>
    <string name="search">search</string>
    <string name="filter">filter</string>
    <string name="write_post">제품 등록</string>
    <string name="tab_one">BEST</string>
    <string name="tab_two">만원미만</string>
    <string name="tab_three">3만원미만</string>
    <string name="tab_four">5만원미만</string>
    <string name="tab_five">10만원이만</string>
    <string name="tab_six">10만원이상</string>
    <string name="btn_login">로그인/회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_info">정보</string>
    <string name="btn_qu">도움말</string>
    <string name="btn_ver">버전정보</string>
    <string name="createmanager">관리자추가</string>
    <string name="customerlist">고객목록</string>
    <string name="managerlist">관리자목록</string>
    <string name="tab_1">패션 | 잡화</string>
    <string name="tab_2">헤어 | 메이크업</string>
    <string name="tab_3">주방 용품</string>
    <string name="tab_4">생활 용품</string>
    <string name="tab_5">헬스 | 건강</string>
    <string name="tab_6">식품</string>
    <string name="tab_7">가전 | 디지털</string>
    <string name="tab_8">자동차 용품</string>
    <string name="tab_9">출산 | 유아동</string>
    <string name="tab_10">홈인테리어</string>
    <string name="tab_11">반려동물 용품</string>
    <string name="tab_12">문구 | 오피스</string>
    <string name="tab_13">문화</string>
    <string name="tab_14">여행</string>
    <string-array name="board_spinner">
        <item>패션 | 잡화</item>
        <item>헤어 | 메이크업</item>
        <item>주방 용품</item>
        <item>생활 용품</item>
        <item>헬스 | 건강</item>
        <item>식품</item>
        <item>가전 | 디지털</item>
        <item>자동차 용품</item>
        <item>출산 | 유아동</item>
        <item>홈인테리어</item>
        <item>반려동물 용품</item>
        <item>문구 | 오피스</item>
        <item>문화</item>
        <item>여행</item>
    </string-array>

    <string-array name="board_delivery_spinner">
        <item>무료</item>
        <item>무료 지역별 추가배송</item>
        <item>유료</item>
    </string-array>

    <string name="inf1">﻿- "배송비: 본 상품의 배송은 무료배송입니다. (도서산간 지역은 추가배송비 3,000~9,900원입니다.)\n"
        "- 본 상품의 평균 배송일은 (입금 확인 후) 2~3일입니다. (연휴 및 공휴일은 제외, 도서지역 2~5일)\n"
        "※ 배송예정일은 주문시점(주문순서)에 따른 유동성이 발생하므로 평균 배송일과는 차이가 발생할 수 있습니다.\n"
        "- 본 상품은 제작 사정에 따라 주문 후 품절이 발생할 수 있으며, 이 경우 즉시 연락을 드려 환불해 드리오니 이 점 양해 바랍니다.\n\n"
    </string>
    <string name="inf2">"- 상품을 인도 받은 날로부터 7일 이내 한해 청약철회(반품) 가능합니다.\n"
        "- 교환 시, 교환 상품이 도착한 후에 상품을 배송해 드립니다.\n"
        "- 반품 시, 반품 상품이 도착한 후에 결제가 취소됩니다.\n"
        "- 고객변심에 의한 반품/교환시 배송비 고객부담(무료배송상품은 초도배송비 포함 완복 배송비 부담)\n\n"

        "*참고사항*\n"
        "-교환/반품은 청약철회 기간내에만 가능하며, 청약철회 기간 이후에는 상품의 하자시에만 가능합니다.\n"
        "- 반품/교환 시 고객님의 귀책 사유로 인해 수거가 지연될 경우에는 반품이 제한될 수 있습니다.\n"
        "- 가격 변동으로 인한 반춤 및 가격 보상은 불가합니다.\n"
        "- 판매하는 협력사별로 동일 상품이어도 가격에 차이가 있을 수 있으며, 이로 인한 반품이나 교환은 불가합니다.\n\n"

        "교환/반품 불가 사유 (상품하자 제외)\n"
        "- 반품/교환 가능 기간을 초과하였을 경우\n"
        " - 상품 및 구성품을 사용하였거나 부주의로 인하여 상품이 훼손(파손/고장/오염 등) 된 경우\n"
        "- 상품 사용 시, 상품설명에 기재된 주의사항을 지키지 않은 경우\n"
        "- 상품택을 파손하였거나 분실했을 경우\n"
        "- 배달 후 설치 완료된 상품인 경우\n"
        "- 기타. '전자상거래 등에서의 소비자보호에 관한 법률'이 정하는 청약철회 제한 사유에 해당되는 경우\n\n"
    </string>
    <string name="inf3">
        "- 소비자분쟁해결 기준(공정거래위원회 고시)에 따라 피해를 보상받을 수 있습니다.\n"
        "- A/S 및 상품문의는 고객센터로 문의하시기 바랍니다. (고객센터 유선번호: 070-4106-3838)\n\n"
    </string>
</resources>