<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/email"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/emailM"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/emailM"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/create_start_margin_125dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/email_h"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameM" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="64dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/star"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/rrn"
            app:layout_constraintStart_toEndOf="@+id/rrn2" />

        <EditText
            android:id="@+id/rrn2"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:inputType="text|phone"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintBaseline_toBaselineOf="@+id/rrn"
            app:layout_constraintStart_toEndOf="@+id/textView10" />

        <EditText
            android:id="@+id/rrn"
            android:layout_width="91dp"
            android:layout_height="41dp"
            android:layout_marginStart="@dimen/create_start_margin_125dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="앞의 7자리"
            android:inputType="text|phone"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneM" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="113dp"
            android:layout_height="37dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/rrn"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/rrn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="63dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/phone"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/phoneM"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/pwck"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/passwordM_ck"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="65dp"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/name"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameM"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="74dp"
            android:layout_height="38dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/pw"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/passwordM"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nameM"
            android:layout_width="193dp"
            android:layout_height="42dp"
            android:layout_marginStart="@dimen/create_start_margin_125dp"
            android:layout_marginTop="84dp"
            android:ems="10"
            android:hint="@string/name_h"
            android:inputType="textPersonName"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordM"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/create_start_margin_125dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/pw_h"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailM" />

        <EditText
            android:id="@+id/passwordM_ck"
            android:layout_width="193dp"
            android:layout_height="47dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="@dimen/create_start_margin_125dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/pwck_h"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordM" />

        <EditText
            android:id="@+id/phoneM"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/create_start_margin_125dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/phone_h"
            android:inputType="phone"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordM_ck" />

        <Button
            android:id="@+id/btn_createM"
            android:layout_width="103dp"
            android:layout_height="44dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/shape_round"
            android:text="@string/join"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rrn2"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="13dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/bar"
            android:textSize="36sp"
            app:layout_constraintStart_toEndOf="@+id/rrn"
            app:layout_constraintTop_toBottomOf="@+id/phoneM" />

        <Button
            android:id="@+id/btn_doubleck"
            android:layout_width="52dp"
            android:layout_height="53dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="124dp"
            android:text="@string/doubleck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>