<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/email"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/email_h"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/name2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="66dp"
            android:layout_height="37dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="직급"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/name2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="63dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/phone"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/phone"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/pwck"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_ck"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="65dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:text="@string/name"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="74dp"
            android:layout_height="38dp"
            android:layout_marginStart="@dimen/start_margin_16dp"
            android:text="@string/pw"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/name2"
            android:layout_width="193dp"
            android:layout_height="42dp"
            android:layout_marginEnd="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="직급 입력"
            android:inputType="textPersonName"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.918"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="193dp"
            android:layout_height="42dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/name_h"
            android:inputType="textPersonName"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.771"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/pw_h"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.698"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/password_ck"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/pwck_h"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/phone_h"
            android:inputType="phone"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.718"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/password_ck" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="103dp"
            android:layout_height="44dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_round"
            android:text="@string/join"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_doubleck"
            android:layout_width="52dp"
            android:layout_height="53dp"
            android:layout_marginTop="152dp"
            android:text="@string/doubleck"
            app:layout_constraintStart_toEndOf="@+id/email"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>